# aiworkspace-governance

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pipeline_registry.md  pyproject.toml
.github/workflows/: tests.yml
docs/: commit-decision-rules.md  operating-model.md  publishing-checklist.md
examples/sample_workspace/: README.md
examples/sample_workspace/projects/sample_project/: README.md
examples/sample_workspace/projects/sample_project/data/raw/: README.md
examples/sample_workspace/projects/sample_project/docs/: project-note.md
examples/sample_workspace/projects/sample_project/pipelines/sample_pipeline/: README.md
examples/sample_workspace/projects/sample_project/pipelines/sample_pipeline/configs/: default.json
examples/sample_workspace/projects/sample_project/pipelines/sample_pipeline/runs/: README.md
examples/sample_workspace/projects/sample_project/pipelines/sample_pipeline/scripts/: run.py
templates/pipeline/: README.md
templates/project/: README.md
tests/: test_scan_rules.py
workspace_guard/: __init__.py  default_rules.json  scan.py
